--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -369,5 +369,28 @@ table {
 .main-section {
   height: 800px;
   background: #f0f0f0;
+  padding-top: 16px;
+}
+.main-section__nav-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 69px;
+  align-items: center;
+}
+.main-section__logo {
+  width: 134px;
+}
+
+.nav-menu__list {
+  display: flex;
+  flex-direction: row;
+}
+.nav-menu__list-item {
+  margin-right: 64px;
+  font-size: 18px;
+}
+.nav-menu__list-item:last-child {
+  margin-right: 0;
 }
 /*# sourceMappingURL=styles.css.map */
