--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -9,6 +9,24 @@
 .main-section
   height: 800px
   background: #f0f0f0
+  padding-top: 16px
+  &__nav-container
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    height: 69px
+    align-items: center
+  &__logo
+    width: 134px
 
 
+.nav-menu
+  &__list
+    display: flex
+    flex-direction: row
+  &__list-item
+    margin-right: 64px
+    font-size: 18px
+    &:last-child
+      margin-right: 0
   
