--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -1,6 +1,13 @@
 @import 'normalize.scss'
 @import 'reset.scss'
 
+*
+  box-sizing: border-box
+
+$color-blue: #5290EA
+$color-orange: #F28B64
+$color-grey: #E2E2E2
+
 .container
   max-width: 1140px
   margin: 0 auto
@@ -29,4 +36,43 @@
     font-size: 18px
     &:last-child
       margin-right: 0
+
+.left-wrapper
+  position: relative
+  img
+    position: relative
+    z-index: 5
+  &__rectangle-blue
+    position: absolute
+    top: 150px
+    left: -50px
+    width: 565px
+    height: 220px
+    background: $color-blue
+    border-radius: 100px
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+    transform: rotate(-64deg)
+    z-index: 2
+  &__rectangle-orange
+    position: absolute
+    width: 618.43px
+    height: 220px
+    left: -30px
+    top: 160px
+    background: $color-orange
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+    border-radius: 100px
+    transform: rotate(-50.81deg)
+    z-index: 3
+  &__rectangle-grey
+    position: absolute
+    width: 608.97px
+    height: 220px
+    left: 10px
+    top: 190px
+    background: $color-grey
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+    border-radius: 100px
+    transform: rotate(-36.15deg)
+    z-index: 1
   
