--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -26,6 +26,7 @@ $color-grey: #E2E2E2
   &__logo
     width: 134px
   &__content-container
+    position: relative
     display: flex
     flex-direction: row
 
@@ -80,6 +81,19 @@ $color-grey: #E2E2E2
     transform: rotate(-36.15deg)
     z-index: 1
 
+.right-wrapper
+  width: 372px  
+  position: absolute
+  top: 150px
+  right: 76px
+  &__icons-box
+    margin-bottom: 1px
+    padding-left: 10px
+  &__title
+    margin-bottom: 5px
+  &__text
+    font-size: 16px
+
 .icons
   display: flex
   flex-direction: row
@@ -96,4 +110,12 @@ $color-grey: #E2E2E2
       margin-right: 0
     i
       font-size: 21px
+
+.title
+  font-size: 72px
+  position: relative
+ 
+
+
+   
   
