--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -462,6 +462,7 @@ table {
 }
 .right-wrapper__text {
   font-size: 16px;
+  margin-bottom: 20px;
 }
 
 .icons {
@@ -488,5 +489,22 @@ table {
 .title {
   font-size: 72px;
   position: relative;
+}
+
+.buttons {
+  display: inline-flex;
+}
+.buttons__main-btn {
+  margin-right: 25px;
+  width: 130px;
+  height: 40px;
+  background: #F28B64;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 100px;
+  border: none;
+  font-size: 16px;
+  color: #fff;
+  cursor: pointer;
+  z-index: 5;
 }
 /*# sourceMappingURL=styles.css.map */
