--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -93,6 +93,7 @@ $color-grey: #E2E2E2
     margin-bottom: 5px
   &__text
     font-size: 16px
+    margin-bottom: 20px
 
 .icons
   display: flex
@@ -114,6 +115,24 @@ $color-grey: #E2E2E2
 .title
   font-size: 72px
   position: relative
+
+.buttons
+  display: inline-flex
+  &__main-btn
+    margin-right: 25px
+    width: 130px
+    height: 40px
+    // flex-direction: row
+    background: $color-orange
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+    border-radius: 100px
+    border: none
+    font-size: 16px
+    color: #fff
+    cursor: pointer
+    z-index: 5
+    
+  
  
 
 
