--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -17,6 +17,8 @@ $color-grey: #E2E2E2
   height: 800px
   background: #f0f0f0
   padding-top: 16px
+  overflow: hidden
+  position: relative
   &__nav-container
     display: flex
     flex-direction: row
@@ -29,6 +31,16 @@ $color-grey: #E2E2E2
     position: relative
     display: flex
     flex-direction: row
+  &__first-ellipse
+    position: absolute
+    top: 129px
+    right: 0
+  &__second-ellipse
+    position: absolute
+    top: 650px
+    right: -120px
+
+
 
 
 
@@ -132,8 +144,27 @@ $color-grey: #E2E2E2
     cursor: pointer
     z-index: 5
     
+.ellipse
+  width: 194px
+  height: 194px
+  background: linear-gradient(143.92deg, rgba(237, 123, 80, 0.5) 14.85%, rgba(72, 138, 234, 0.5) 53.25%, rgba(44, 44, 44, 0.5) 85.74%)
+  border-radius: 150px
+  display: flex
+  justify-content: center
+  align-items: center
+  &_dig
+    width: 282px
+    height: 282px
+  &__subtract
+    width: 129.33px
+    height: 129.33px
+    background: #f0f0f0
+    border-radius: 150px
+    &_big
+      width: 188px
+      height: 188px
   
- 
+    
 
 
    
