--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -371,7 +371,7 @@ table {
 }
 
 .main-section {
-  height: 800px;
+  min-height: 800px;
   background: #f0f0f0;
   padding-top: 16px;
   overflow: hidden;
@@ -542,5 +542,45 @@ table {
 .ellipse__subtract_big {
   width: 188px;
   height: 188px;
+}
+
+.second-section {
+  min-height: 700px;
+}
+.second-section__container {
+  padding-top: 32px;
+}
+.second-section__title {
+  margin-bottom: 40px;
+}
+
+.cards-item {
+  position: relative;
+  width: 360px;
+  height: 360px;
+  background: #E2E2E2;
+  border-radius: 10px;
+  display: flex;
+  align-items: flex-end;
+}
+.cards-item__img {
+  height: 335px;
+}
+.cards-item__text {
+  widht: 280px;
+  font-size: 36px;
+  text-align: center;
+  transform: rotate(90deg);
+  position: absolute;
+  top: 140px;
+  right: 30px;
+}
+
+.cards-item_orange {
+  background: #F28B64;
+}
+
+.cards-item_blue {
+  background: #5290EA;
 }
 /*# sourceMappingURL=styles.css.map */
