--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -14,7 +14,7 @@ $color-grey: #E2E2E2
 
 
 .main-section
-  height: 800px
+  min-height: 800px
   background: #f0f0f0
   padding-top: 16px
   overflow: hidden
@@ -39,10 +39,6 @@ $color-grey: #E2E2E2
     position: absolute
     top: 650px
     right: -120px
-
-
-
-
 
 .nav-menu
   &__list
@@ -163,6 +159,39 @@ $color-grey: #E2E2E2
     &_big
       width: 188px
       height: 188px
+
+.second-section
+  min-height: 700px
+  &__container
+    padding-top: 32px
+  &__title
+    margin-bottom: 40px
+
+.cards-item
+  position: relative
+  width: 360px
+  height: 360px
+  background: #E2E2E2
+  border-radius: 10px
+  display: flex
+  align-items: flex-end
+  &__img
+    height: 335px
+  &__text
+    widht: 280px
+    font-size: 36px
+    text-align: center
+    transform: rotate(90deg)
+    position: absolute
+    top: 140px
+    right: 30px
+
+.cards-item_orange
+    background: $color-orange
+
+.cards-item_blue
+    background: $color-blue
+
   
     
 
