--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -230,6 +230,26 @@ $color-grey: #E2E2E2
     span 
       font-size: 48px
 
+.third-section
+  min-height: 640px 
+  background: #f0f0f0
+  &__container
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-between
+    padding-top: 46px
+    padding-left: 167px
+  &__right-wrapper
+    max-width: 480px
+  &__right-title
+    margin-bottom: 20px
+  &__text
+    margin-bottom: 30px
+    font-size: 18px
+
+  
+
   
     
 
