--- a/css/styles.css
+++ b/css/styles.css
@@ -432,6 +432,10 @@ html {
 .nav-menu__list-item:last-child {
   margin-right: 0;
 }
+.nav-menu a {
+  text-decoration: none;
+  color: #000;
+}
 
 .left-wrapper {
   position: relative;
