--- a/css/styles.sass
+++ b/css/styles.sass
@@ -68,6 +68,9 @@ $color-grey: #E2E2E2
     font-size: 18px
     &:last-child
       margin-right: 0
+  a
+    text-decoration: none
+    color: #000
 
 .left-wrapper
   position: relative
