--- a/css/styles.css
+++ b/css/styles.css
@@ -532,6 +532,7 @@ html {
 
 .buttons {
   display: inline-flex;
+  position: absolute;
 }
 .buttons__main-btn {
   margin-right: 25px;
@@ -572,6 +573,7 @@ html {
 }
 
 .second-section {
+  overflow: hidden;
   min-height: 700px;
 }
 .second-section__container {
@@ -583,6 +585,8 @@ html {
 }
 .second-section__cards-box {
   display: inline-flex;
+  justify-content: center;
+  margin-bottom: 25px;
 }
 .second-section__cards-item {
   margin: 30px;
@@ -595,10 +599,7 @@ html {
 }
 .second-section__icons-box {
   display: flex;
-  justify-content: space-between;
-}
-.second-section__icons-item {
-  margin-right: 60px;
+  justify-content: space-evenly;
 }
 .second-section__icons-item:last-child {
   margin-right: 0;
@@ -736,5 +737,101 @@ html {
 }
 .footer__title {
   margin-bottom: 20px;
+}
+
+@media (max-width: 1190px) {
+  .container {
+    width: 960px;
+  }
+  .main-section {
+    min-height: 690px;
+  }
+  .left-wrapper img {
+    width: 780px;
+  }
+  .left-wrapper__rectangle-blue {
+    width: 500px;
+    height: 200px;
+  }
+  .left-wrapper__rectangle-orange {
+    width: 550px;
+    height: 200px;
+  }
+  .left-wrapper__rectangle-grey {
+    width: 500px;
+    height: 200px;
+  }
+  .right-wrapper {
+    right: 20px;
+  }
+  .main-section__first-ellipse {
+    right: -12px;
+  }
+  .main-section {
+    min-height: 720px;
+  }
+  .main-section__second-ellipse {
+    top: 712px;
+  }
+  .right-wrapper__button.buttons {
+    right: -60px;
+  }
+  .second-section {
+    min-height: 600px;
+  }
+  .second-section__cards-box {
+    display: flex;
+    justify-content: center;
+  }
+  .cards-item {
+    width: 282px;
+    height: 300px;
+    margin-right: 18px;
+  }
+  .cards-item__img {
+    height: 280px;
+  }
+  .cards-item__text {
+    font-size: 25px;
+    top: 130px;
+  }
+  .icons-item__img {
+    width: 80px;
+    margin-right: 10px;
+  }
+  .third-section__music-sign {
+    left: 255px;
+  }
+  .third-section__music-sign__second {
+    left: 355px;
+  }
+  .right-wrapper__button.buttons {
+    right: -25px;
+  }
+  .third-section__second-ellipse {
+    right: -95px;
+    top: -91px;
+  }
+  .third-section__container {
+    padding-left: 85px;
+  }
+  .third-section__right-wrapper {
+    max-width: 450px;
+  }
+}
+@media (max-width: 991px) {
+  .container {
+    width: 720px;
+  }
+}
+@media (max-width: 767px) {
+  .container {
+    width: 540px;
+  }
+}
+@media (max-width: 575px) {
+  .container {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
