--- a/css/styles.sass
+++ b/css/styles.sass
@@ -153,6 +153,7 @@ $color-grey: #E2E2E2
 
 .buttons
   display: inline-flex
+  position: absolute
   &__main-btn
     margin-right: 25px
     width: 130px
@@ -188,6 +189,7 @@ $color-grey: #E2E2E2
       height: 188px
 
 .second-section
+  overflow: hidden
   min-height: 700px
   &__container
     padding-top: 32px
@@ -196,6 +198,8 @@ $color-grey: #E2E2E2
     margin-bottom: 40px
   &__cards-box
     display: inline-flex
+    justify-content: center
+    margin-bottom: 25px
   &__cards-item
     margin: 30px
     &:first-child
@@ -204,9 +208,9 @@ $color-grey: #E2E2E2
       margin-right: 0
   &__icons-box
     display: flex
-    justify-content: space-between
+    justify-content: space-evenly
   &__icons-item
-    margin-right: 60px
+    // margin-right: 60px
     &:last-child
       margin-right: 0
   &__first-ellipse
@@ -322,9 +326,79 @@ $color-grey: #E2E2E2
   &__title
     margin-bottom: 20px
 
+@media (max-width: 1190px)
+  .container
+    width: 960px
+  .main-section
+    min-height: 690px
+  .left-wrapper
+    img
+        width: 780px 
+    &__rectangle-blue
+        width: 500px
+        height: 200px
+    &__rectangle-orange
+        width: 550px
+        height: 200px
+    &__rectangle-grey
+        width: 500px
+        height: 200px
+  .right-wrapper
+    right: 20px
+  .main-section__first-ellipse
+    right: -12px
+  .main-section
+    min-height: 720px
+  .main-section__second-ellipse
+    top: 712px
+  .right-wrapper__button.buttons
+    right: -60px
+    
+  .second-section
+    min-height: 600px
+    &__cards-box
+      display: flex
+      justify-content: center
+  .cards-item
+    width: 282px
+    height: 300px
+    margin-right: 18px
+  .cards-item__img
+    height: 280px
+  .cards-item__text
+    font-size: 25px
+    top: 130px
+  .icons-item__img
+    width: 80px
+    margin-right: 10px
+  .third-section__music-sign
+    left: 255px
+  .third-section__music-sign__second
+    left: 355px
+  .right-wrapper__button.buttons
+    right: -25px
+  .third-section__second-ellipse
+    right: -95px
+    top: -91px
 
+  .third-section__container
+        padding-left: 85px
+  .third-section__right-wrapper 
+        max-width: 450px
     
 
+@media (max-width: 991px)
+  .container
+    width: 720px
+
+@media (max-width: 767px)
+  .container
+    width: 540px
+
+@media (max-width: 575px)
+  .container
+    width: 100%
+  
   
 
   
