--- a/css/styles.css
+++ b/css/styles.css
@@ -820,8 +820,64 @@ html {
   }
 }
 @media (max-width: 991px) {
+  .main-section {
+    min-height: 530px;
+  }
+  .main-section__second-ellipse {
+    top: 445px;
+    right: -70px;
+  }
   .container {
     width: 720px;
+  }
+  .nav-menu__list-item {
+    font-size: 17px;
+  }
+  .left-wrapper img {
+    width: 550px;
+  }
+  .left-wrapper__rectangle-blue {
+    width: 330px;
+    height: 120px;
+  }
+  .left-wrapper__rectangle-orange {
+    width: 355px;
+    height: 120px;
+  }
+  .left-wrapper__rectangle-grey {
+    width: 340px;
+    height: 105px;
+  }
+  .right-wrapper {
+    width: 300px;
+    top: 75px;
+  }
+  .right-wrapper__title {
+    font-size: 40px;
+  }
+  .right-wrapper__text {
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
+  .buttons__main-btn {
+    font-size: 14px;
+    margin-right: 10px;
+    width: 115px;
+    height: 40px;
+  }
+  .right-wrapper__button.buttons {
+    right: -45px;
+  }
+  .main-section__first-ellipse {
+    top: 15px;
+  }
+  .ellipse {
+    width: 150px;
+    height: 150px;
+  }
+  .ellipse__subtract {
+    width: 110px;
+    height: 110px;
   }
 }
 @media (max-width: 767px) {
