--- a/css/styles.sass
+++ b/css/styles.sass
@@ -388,8 +388,54 @@ $color-grey: #E2E2E2
     
 
 @media (max-width: 991px)
+  .main-section
+    min-height: 530px
+    &__second-ellipse
+      top: 445px
+      right: -70px
   .container
     width: 720px
+  .nav-menu__list-item
+    font-size: 17px
+  .left-wrapper
+    img
+      width: 550px 
+    &__rectangle-blue
+      width: 330px
+      height: 120px
+    &__rectangle-orange
+      width: 355px
+      height: 120px
+    &__rectangle-grey
+      width: 340px
+      height: 105px
+  .right-wrapper
+    width: 300px
+    top: 75px
+    &__title
+       font-size: 40px
+    &__text
+      font-size: 14px
+      margin-bottom: 10px
+  .buttons
+    &__main-btn
+      font-size: 14px
+      margin-right: 10px
+      width: 115px  
+      height: 40px
+  .right-wrapper__button.buttons
+    right: -45px
+  .main-section__first-ellipse
+    top: 15px
+  .ellipse
+    width: 150px
+    height: 150px
+    &__subtract
+      width: 110px
+      height: 110px
+ 
+    
+
 
 @media (max-width: 767px)
   .container
@@ -398,6 +444,7 @@ $color-grey: #E2E2E2
 @media (max-width: 575px)
   .container
     width: 100%
+    
   
   
 
