--- a/css/styles.sass
+++ b/css/styles.sass
@@ -409,13 +409,16 @@ $color-grey: #E2E2E2
     &__rectangle-grey
       width: 340px
       height: 105px
+  .title
+    font-size: 40px
+    margin-bottom: 0px
   .right-wrapper
     width: 300px
     top: 75px
     &__title
-       font-size: 40px
+      font-size: 40px
     &__text
-      font-size: 14px
+      font-size: 16px
       margin-bottom: 10px
   .buttons
     &__main-btn
@@ -425,6 +428,65 @@ $color-grey: #E2E2E2
       height: 40px
   .right-wrapper__button.buttons
     right: -45px
+  .cards-item
+    width: 225px
+    height: 270px
+    &__img
+      height: 240px
+    &__text
+      font-size: 20px
+      top: 121px
+      right: 5px
+  .second-section
+    min-height: 500px
+    &__container
+    padding-top: 10px
+    &__cards-box
+      margin-bottom: -10px
+    &__first-ellipse
+      right: -20px
+      top: 55px
+    &__second-ellipse
+      top: 310px
+  .icons-item
+    &__img
+      width: 60px
+    &__text
+      font-size: 16px
+      span
+        font-size: 35px
+  .third-section
+    min-height: 550px
+    &__left-title
+      display: none
+    &__right-wrapper
+      max-width: 660px
+    &__container
+      justify-content: flex-start
+      padding-left: 10px
+      padding-top: 20px
+    &__right-title
+      margin-bottom: 10px
+    &__music-sign
+      left: 110px
+    &__music-sign__second 
+      left: 215px 
+    &__text
+      font-size: 16px
+  .right-wrapper__button.buttons
+      right: 50px
+  .footer
+    &__img
+      width: 500px
+    &__title
+      width: 350px
+      margin-bottom: 10px
+    &__container
+      min-height: 210px
+    
+    
+    
+
   .main-section__first-ellipse
     top: 15px
   .ellipse
