--- a/css/styles.css
+++ b/css/styles.css
@@ -848,6 +848,10 @@ html {
     width: 340px;
     height: 105px;
   }
+  .title {
+    font-size: 40px;
+    margin-bottom: 0px;
+  }
   .right-wrapper {
     width: 300px;
     top: 75px;
@@ -856,7 +860,7 @@ html {
     font-size: 40px;
   }
   .right-wrapper__text {
-    font-size: 14px;
+    font-size: 16px;
     margin-bottom: 10px;
   }
   .buttons__main-btn {
@@ -867,6 +871,80 @@ html {
   }
   .right-wrapper__button.buttons {
     right: -45px;
+  }
+  .cards-item {
+    width: 225px;
+    height: 270px;
+  }
+  .cards-item__img {
+    height: 240px;
+  }
+  .cards-item__text {
+    font-size: 20px;
+    top: 121px;
+    right: 5px;
+  }
+  .second-section {
+    min-height: 500px;
+    padding-top: 10px;
+  }
+  .second-section__cards-box {
+    margin-bottom: -10px;
+  }
+  .second-section__first-ellipse {
+    right: -20px;
+    top: 55px;
+  }
+  .second-section__second-ellipse {
+    top: 310px;
+  }
+  .icons-item__img {
+    width: 60px;
+  }
+  .icons-item__text {
+    font-size: 16px;
+  }
+  .icons-item__text span {
+    font-size: 35px;
+  }
+  .third-section {
+    min-height: 550px;
+  }
+  .third-section__left-title {
+    display: none;
+  }
+  .third-section__right-wrapper {
+    max-width: 660px;
+  }
+  .third-section__container {
+    justify-content: flex-start;
+    padding-left: 10px;
+    padding-top: 20px;
+  }
+  .third-section__right-title {
+    margin-bottom: 10px;
+  }
+  .third-section__music-sign {
+    left: 110px;
+  }
+  .third-section__music-sign__second {
+    left: 215px;
+  }
+  .third-section__text {
+    font-size: 16px;
+  }
+  .right-wrapper__button.buttons {
+    right: 50px;
+  }
+  .footer__img {
+    width: 500px;
+  }
+  .footer__title {
+    width: 350px;
+    margin-bottom: 10px;
+  }
+  .footer__container {
+    min-height: 210px;
   }
   .main-section__first-ellipse {
     top: 15px;
