--- a/css/styles.sass
+++ b/css/styles.sass
@@ -417,6 +417,7 @@ $color-grey: #E2E2E2
     top: 75px
     &__title
       font-size: 40px
+      margin-bottom: 5px
     &__text
       font-size: 16px
       margin-bottom: 10px
@@ -473,8 +474,8 @@ $color-grey: #E2E2E2
       left: 215px 
     &__text
       font-size: 16px
-  .right-wrapper__button.buttons
-      right: 50px
+    .right-wrapper__button.buttons
+      right: 30px
   .footer
     &__img
       width: 500px
@@ -482,11 +483,7 @@ $color-grey: #E2E2E2
       width: 350px
       margin-bottom: 10px
     &__container
-      min-height: 210px
-    
-    
-    
-
+      min-height: 215px
   .main-section__first-ellipse
     top: 15px
   .ellipse
