--- a/css/styles.sass
+++ b/css/styles.sass
@@ -500,7 +500,21 @@ $color-grey: #E2E2E2
   .container
     width: 540px
   .nav-menu
-    display: none
+    position: fixed
+    top: 0
+    right: -100%
+    height: 100vh
+    width: 50%
+    background: $color-blue
+    z-index: 20
+    transition: 0.5s all
+    &__list
+      flex-direction: column
+      justify-content: space-evenly
+      align-items: center
+      height: 100%
+    &__list-item
+      margin-right: 0
   .hamburger
     width: 30px
     position: absolute
@@ -516,7 +530,7 @@ $color-grey: #E2E2E2
       transition: 0.5s all
       &:last-child
         margin-bottom: 0
-  .hamburger_activ
+  .hamburger__active
     span
       margin-bottom: -2px
       &:nth-child(1)
@@ -525,6 +539,9 @@ $color-grey: #E2E2E2
         display: none
       &:nth-child(3)
         transform: translateY(3px) rotate(45deg)
+  .nav-menu__active
+    right: 0
+
 
         
 
