--- a/css/styles.sass
+++ b/css/styles.sass
@@ -521,7 +521,7 @@ $color-grey: #E2E2E2
     top: 40px
     right: 30px
     height: 14px
-    z-index: 10
+    z-index: 30
     span
       height: 2px
       width: 100%
@@ -535,13 +535,13 @@ $color-grey: #E2E2E2
     span
       margin-bottom: -2px
       &:nth-child(1)
-        transform: translateY(3px) rotate(-45deg)
+        ransform: translateY(3px) rotate(-45deg)
       &:nth-child(2)
         display: none
       &:nth-child(3)
         transform: translateY(3px) rotate(45deg) 
-    .nav-menu_active
-        right: 0px
+  .nav-menu_active
+    right: 0px
 
 
         
