--- a/css/styles.css
+++ b/css/styles.css
@@ -988,7 +988,7 @@ html {
     top: 40px;
     right: 30px;
     height: 14px;
-    z-index: 10;
+    z-index: 30;
   }
   .hamburger span {
     height: 2px;
@@ -1005,7 +1005,7 @@ html {
     margin-bottom: -2px;
   }
   .hamburger_active span:nth-child(1) {
-    transform: translateY(3px) rotate(-45deg);
+    ransform: translateY(3px) rotate(-45deg);
   }
   .hamburger_active span:nth-child(2) {
     display: none;
@@ -1013,7 +1013,7 @@ html {
   .hamburger_active span:nth-child(3) {
     transform: translateY(3px) rotate(45deg);
   }
-  .hamburger_active .nav-menu_active {
+  .nav-menu_active {
     right: 0px;
   }
 }
