--- a/css/styles.sass
+++ b/css/styles.sass
@@ -497,6 +497,14 @@ $color-grey: #E2E2E2
 
 
 @media (max-width: 767px)
+  .main-section
+    &__first-ellipse
+    top: 2px
+    right: 3px
+
+  .ellipse
+    width: 130px
+    height: 128px
   .container
     width: 540px
   .nav-menu
@@ -542,6 +550,47 @@ $color-grey: #E2E2E2
         transform: translateY(3px) rotate(45deg) 
   .nav-menu_active
     right: 0px
+  .left-wrapper
+    img
+      width: 450px 
+    &__rectangle-blue
+      width: 345px
+      height: 90px
+      left: -65px
+    &__rectangle-orange
+      width: 345px
+      height: 90px
+      left: -40px
+      top: 166px
+    &__rectangle-grey
+      width: 345px
+      height: 90px
+      left: -17px
+      top: 185px
+  .right-wrapper
+    width: 242px
+    top: 5px
+    right: -20px
+    &__icons-box
+      margin-bottom: 5px
+      padding-left: 5px
+    &__title
+      font-size: 20px
+      margin-bottom: 5px
+    &__text
+      font-size: 10px
+      margin-bottom: 5px
+  .buttons
+    &__main-btn
+      font-size: 10px
+      margin-right: 3px
+      width: 80px  
+      height: 25px
+  .right-wrapper__button.buttons
+    right: 18px
+  .icons__item
+    width: 30px
+    height: 30px
 
 
         
